--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/multer": "^1.4.7",
     "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
@@ -25,6 +26,7 @@
   "dependencies": {
     "@types/express": "^4.17.13",
     "express": "^4.17.3",
+    "multer": "^1.4.5-lts.1",
     "uuid": "^8.3.2"
   }
 }
