--- a/api/package.json
+++ b/api/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.13",
+    "csv-parse": "^5.1.0",
     "express": "^4.17.3",
     "multer": "^1.4.5-lts.1",
     "uuid": "^8.3.2"
